# i3bar-river

./: .gitignore  Cargo.toml  README.md  backup.rs  build.rs
.github/workflows/: rust.yml
protocols/: river-control-unstable-v1.xml  river-status-unstable-v1.xml  xdg-shell.xml
src/: bar.rs  bar_state.rs  blocks_cache.rs  button_manager.rs  color.rs  config.rs  cursor.rs  event_loop.rs  i3bar_protocol.rs  lines_buffer.rs  main.rs  ord_adaptor.rs  output.rs  pointer_btn.rs  protocol.rs  river_protocols.rs  shared_state.rs  state.rs  status_cmd.rs  tags.rs  text.rs  utils.rs  wm_info_provider.rs
src/config/: mod.rs  theme.rs
src/river_protocols/: control.rs  status.rs
src/river_protocols/control/: dispatch.rs
src/river_protocols/status/: dispatch.rs
src/wm_info_provider/: dummy.rs  ext_workspace_unstable.rs  hyprland.rs  niri.rs  river.rs
