[package]
name = "i3bar-river"
description = "A port of i3bar for river"
repository = "https://github.com/MaxVerevkin/i3bar-river"
readme = "README.md"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0-only"
authors = ["MaxVerevkin <maxxverrr@gmail.com>"]

[features]
hyprland = []

[dependencies]
anyhow = "1"
toml = { version = "0.7", default-features = false, features = ["parse"] }
pangocairo = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memchr = "2"
signal-hook = { version = "0.3", default-features = false }
nix = { version = "0.26", default-features = false, features = ["fs", "poll"] }

wayrs-client = "0.11" 
wayrs-utils = { version = "0.9", features = ["cursor", "shm_alloc", "seats"] }
wayrs-protocols = { version = "0.11", features = ["wlr-layer-shell-unstable-v1", "viewporter", "fractional-scale-v1"] }

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
