[package]
name = "i3bar-river"
description = "A port of i3bar for river"
repository = "https://github.com/MaxVerevkin/i3bar-river"
readme = "README.md"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0-only"
authors = ["MaxVerevkin <maxxverrr@gmail.com>"]

[features]
hyprland = []

[dependencies]
anyhow = "1"
memchr = "2"
nix = { version = "0.26", default-features = false, features = ["fs", "poll"] }
pangocairo = "0.17"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
signal-hook = { version = "0.3", default-features = false }
toml = { version = "0.7", default-features = false, features = ["parse"] }
wayrs-client = "0.12" 
wayrs-protocols = { version = "0.12", features = ["wlr-layer-shell-unstable-v1", "viewporter", "fractional-scale-v1"] }
wayrs-utils = { version = "0.10", features = ["cursor", "shm_alloc", "seats"] }
clap = { version = "4.3.23", default-features = false, features = ["derive", "std", "help"] }

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
