[package]
name = "i3bar-river"
description = "A port of i3bar for wlroots-based compositors "
repository = "https://github.com/MaxVerevkin/i3bar-river"
readme = "README.md"
version = "0.1.7"
edition = "2021"
license = "GPL-3.0-only"
authors = ["MaxVerevkin <maxxverrr@gmail.com>"]

[dependencies]
anyhow = "1"
memchr = "2"
pangocairo = "0.19"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
signal-hook = { version = "0.3", default-features = false }
toml = { version = "0.8", default-features = false, features = ["parse"] }
wayrs-client = "1.0" 
wayrs-protocols = { version = "0.13", features = ["wlr-layer-shell-unstable-v1", "viewporter", "fractional-scale-v1"] }
wayrs-utils = { version = "0.14", features = ["cursor", "shm_alloc", "seats"] }
clap = { version = "4.3", default-features = false, features = ["derive", "std", "help", "usage"] }
libc = "0.2"

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
